# pyb4model

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
b4model/: b4model.py  feature_selection.py  fit_and_report.py
docs/: Makefile  conf.py  installation.rst  make.bat  usage.rst
docs/_build/doctrees/: contributing.doctree  contributors.doctree  environment.pickle  index.doctree  installation.doctree  readme.doctree  usage.doctree
docs/_build/doctrees/source/: modules.doctree  pyb4model.doctree
docs/_build/html/: .buildinfo  contributing.html  contributors.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt
docs/_build/html/_sources/source/: pyb4model.rst.txt
docs/_build/html/source/: modules.html  pyb4model.html
docs/source/: modules.rst
pyb4model/: pyb4model.py
pyb4model.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_feature_splitter.py  test_fit_and_report.py  test_pyb4model.py
