[tool.poetry]
name = "pyb4model"
version = "0.1.0"
description = "A python package to preprocess data and conduct machine learning!"
authors = ["Sakariya Aynashe", "Andrea Lee", "Jaekun Lee", "Xinwen Wang"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
sklearn = "^0.0.0"
numpy = "^1.18.1"
pytest = "^5.3.5"
unittest = "^0.0.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
