[tool.poetry]
name = "pyb4model"
version = "0.1.6"
description = "A python package to preprocess data and conduct machine learning!"
authors = ["Sakariya Aynashe", "Andrea Lee", "Jaekun Lee", "Xinwen Wang"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/pyb4model"
repository = "https://github.com/UBC-MDS/pyb4model"
documentation = 'https://pyb4model.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
numpy = "^1.18.1"
pytest = "^5.3.5"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8"
flake8 = "^3.7.9"
codecov = "^2.0.16"
python-semantic-release = "^4.10.0"
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"

[tool.semantic_release]
version_variable = "pyb4model/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

